<resources>
    <string name="app_name">Space Shooting App</string>
    <string name="start">START</string>
    <string name="stop">STOP</string>
    <string name="pause">PAUSE</string>
    <string name="resume">RESUME</string>

    <string name="keypad_down"><![CDATA[D]]></string>
    <string name="keypad_left"><![CDATA[L]]></string>
    <string name="keypad_right"><![CDATA[R]]></string>
    <string name="keypad_up"><![CDATA[U]]></string>
    <string name="btn_fire"><![CDATA[F]]></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
