<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:layout_gravity="bottom">

    <Button
        android:layout_width="@dimen/keypad_size"
        android:layout_height="@dimen/keypad_size"
        android:id="@+id/keypad_up"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/keypad_left"
        android:text="@string/keypad_up"/>

    <Button
        android:layout_width="@dimen/keypad_size"
        android:layout_height="@dimen/keypad_size"
        android:id="@+id/keypad_down"
        android:layout_below="@+id/keypad_left"
        android:layout_toRightOf="@+id/keypad_left"
        android:text="@string/keypad_down"/>

    <Button
        android:layout_width="@dimen/keypad_size"
        android:layout_height="@dimen/keypad_size"
        android:id="@+id/keypad_left"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/keypad_up"
        android:text="@string/keypad_left"/>

    <Button
        android:layout_width="@dimen/keypad_size"
        android:layout_height="@dimen/keypad_size"
        android:id="@+id/keypad_right"
        android:layout_below="@id/keypad_up"
        android:layout_toRightOf="@id/keypad_up"
        android:text="@string/keypad_right"/>

    <Button
        android:layout_width="@dimen/keypad_size"
        android:layout_height="@dimen/keypad_size"
        android:id="@+id/btn_fire"
        android:layout_alignParentRight="true"
        android:layout_below="@id/keypad_up"
        android:text="@string/btn_fire"/>

</RelativeLayout>